# GemmPractice

./: .gitignore  CMakeLists.txt  compare_performance.py  gemm_cublas.cu  gemm_cuda_core_1.cu  gemm_cuda_core_2.cu  gemm_cuda_core_3.cu  gemm_cuda_core_4.cu  gemm_tensor_core_1.cu  gemm_tensor_core_2.cu  gemm_tensor_core_3.cu  gemm_tensor_core_4.cu  run.sh  utils.h  visualize_swizzle.py
